@@ -1,5 +1,9 @@
 2008-05-29  Jonh Wendell <jwendell@gnome.org>
 
+	* src/vinagre-tab.c: Fix bug #531969 - scrolling on server.
+
+2008-05-29  Jonh Wendell <jwendell@gnome.org>
+
 	Added a gconf key to disable menu shortcuts.
 
 2008-05-29  Jonh Wendell <jwendell@gnome.org>
